fix: use code geenration
